<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SensorSystem</string>
    <string name="action_settings">Settings</string>
    <string name="title_components">Components</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_event_log">Event Log</string>
    <string name="event_title_value">Event Title</string>
    <string name="event_when_value">00:00:00</string>
    <string name="event_content_value">Event Content</string>
    <string name="event_source_value">com.ncoder.sensorsystem.EventSource</string>
    <string name="button_scroll_lock">Scroll Lock</string>
    <string name="component_type_value">Component Type</string>
    <string name="component_title_value">Component Title</string>
    <string name="button_scroll_free">Free Scrolling</string>
    <string name="action_stop_service">Stop Service</string>
    <string name="title_component_info_dblogger">Database Logger</string>
    <string name="text_log_entries_count">&lt;b>%d&lt;/b> log entries in the database.</string>
    <string name="title_component_info_sensor">Sensor</string>
    <string name="sensor_accuracy_label">Accuracy:</string>
    <string name="sensor_batch_label">Batch:</string>
    <string name="sensor_value_label">Value</string>
    <string name="sensor_value_unknown">\?\?\?</string>
    <string name="title_component_info_user">User</string>
</resources>
