<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/event_title_value"
            android:id="@+id/event_title" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/event_when"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/event_when_value"
            android:id="@+id/event_when" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColorHint="@android:color/secondary_text_light"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_content_value"
            android:id="@+id/event_content" android:layout_below="@+id/event_title"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/event_source_value"
            android:id="@+id/event_source"
            android:layout_below="@+id/event_content" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@android:color/secondary_text_light"/>
</RelativeLayout>
