<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.ncoder.sensorsystem.android.app.sensorUI.AndroidSensorUI"
                android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sensor_accuracy_label" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:textStyle="bold"
            android:text="@string/sensor_accuracy_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sensor_accuracy" android:layout_alignBaseline="@id/sensor_accuracy_label"
            android:layout_toRightOf="@id/sensor_accuracy_label" android:layout_marginLeft="16dp"
            android:text="@string/sensor_value_unknown"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sensor_batch_label"
            android:layout_below="@+id/sensor_accuracy_label" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:textStyle="bold"
            android:text="@string/sensor_batch_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sensor_batch" android:layout_alignBaseline="@id/sensor_batch_label"
            android:layout_toRightOf="@+id/sensor_batch_label" android:layout_marginLeft="16dp"
            android:text="@string/sensor_value_unknown"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/sensor_value_label" android:layout_below="@+id/sensor_batch_label"
            android:layout_alignParentLeft="true" android:layout_marginTop="16dp"
            android:text="@string/sensor_value_label" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sensor_value" android:layout_below="@+id/sensor_value_label" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/sensor_value_unknown"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/sensor_last_update" android:layout_alignBaseline="@+id/sensor_value_label" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>
